# learning-forces

./: .gitignore  README.md  build_linux.sh
PhysXSDK/Include/cloth/: PxCloth.h
PhysXSDK/Include/foundation/unix/: PxUnixIntrinsics.h
PhysXSDK/Samples/compiler/linux64/: Makefile
PhysXSDK/Samples/compiler/linux64/.deps/SampleBase/release/SampleBase/: AcclaimLoader.cpp.P  InputEventBuffer.cpp.P  ParticleEmitter.cpp.P  ParticleEmitterPressure.cpp.P  ParticleEmitterRate.cpp.P  ParticleFactory.cpp.P  ParticleSystem.cpp.P  (+32 more)
PhysXSDK/Source/LowLevelCloth/include/: Cloth.h  PhaseConfig.h
PhysXSDK/Source/LowLevelCloth/src/: ClothImpl.h  IterationState.h  PhaseConfig.cpp  SwCloth.cpp  SwCloth.h  SwClothData.cpp  SwClothData.h  SwCollision.cpp  SwCollision.h  SwSelfCollision.cpp  SwSelfCollision.h  SwSolverKernel.cpp
PhysXSDK/Source/PhysX/src/: NpRigidStatic.cpp
PhysXSDK/Source/PhysX/src/buffering/: ScbCloth.h
PhysXSDK/Source/PhysX/src/cloth/: NpCloth.cpp  NpCloth.h
PhysXSDK/Source/PhysXExtensions/src/: ExtClothFabricCooker.cpp
PhysXSDK/Source/SimulationController/include/: ScClothCore.h
PhysXSDK/Source/SimulationController/src/cloth/: ScClothCore.cpp
PhysXSDK/Source/compiler/linux64/: Makefile  Makefile.LowLevelCloth.mk
PhysXSDK/media/PhysX/3.3/Samples/user/cached/: SampleBridges.raw_0_40000000.cooked  planet.raw_0_40000000.cooked  planet.raw_1_40000000.cooked  planet.raw_2_40000000.cooked  planet.raw_3_40000000.cooked  planet.raw_4_40000000.cooked  planet.raw_5_40000000.cooked
physx_simulation/: CMakeLists.txt
physx_simulation/Data/caughtmiss/subject0/: 10.txt
physx_simulation/Data/caughtmiss/subject10/: 5.txt
physx_simulation/Data/caughtmiss/subject12/: 7.txt
physx_simulation/Data/caughtmiss/subject2/: 1.txt  7.txt
physx_simulation/Data/caughtmiss/subject3/: 2.txt
physx_simulation/Data/caughtmiss/subject7/: 1.txt  3.txt
physx_simulation/Data/caughtmiss/subject8/: 4.txt
physx_simulation/Data/good/subject0/: 0.txt
physx_simulation/Data/good/subject1/: 1.txt  3.txt
physx_simulation/Data/good/subject10/: 2.txt
physx_simulation/Data/good/subject11/: 0.txt
physx_simulation/Data/good/subject12/: 3.txt
physx_simulation/Data/good/subject2/: 2.txt
physx_simulation/Data/good/subject3/: 1.txt
physx_simulation/Data/good/subject4/: 3.txt
physx_simulation/Data/good/subject5/: 1.txt
physx_simulation/Data/good/subject7/: 3.txt
physx_simulation/Data/good/subject8/: 2.txt
physx_simulation/Data/good/subject9/: 3.txt
physx_simulation/Data/miss/subject0/: 0.txt
physx_simulation/Data/miss/subject1/: 1.txt  4.txt
physx_simulation/Data/miss/subject10/: 0.txt
physx_simulation/Data/miss/subject11/: 3.txt
physx_simulation/Data/miss/subject12/: 8.txt
physx_simulation/Data/miss/subject2/: 6.txt
physx_simulation/Data/miss/subject3/: 0.txt
physx_simulation/Data/miss/subject4/: 2.txt
physx_simulation/Data/miss/subject5/: 1.txt
physx_simulation/Data/miss/subject7/: 0.txt
physx_simulation/Data/miss/subject8/: 7.txt
physx_simulation/Data/miss/subject9/: 3.txt
physx_simulation/apps/: evaluator.cpp  initials.par  policySearch.cpp  signals.par  startupSlaves.py
physx_simulation/cmake/: FindPhysX.cmake  Findpng.cmake
physx_simulation/config/: config.ini
physx_simulation/pysim/: autogown.py  autoshorts.py  basesim.py  cma_optimization.py  datapreprocess.py  gownforcemaps.py  gowntest.py  learning.py  mse.py  shortsforcemaps.py  shortstest.py  util.py  variationtestgown.py  variationtestshorts.py  variationtestvizmse.py
physx_simulation/pysim/bindings/: pysim.cpp
physx_simulation/pysim/models/2016-09-10_18-25-14_18-10-54_ForceTorqueVelocity_rawPressuremap_neoarm/: architectureLSTM.json  weights_9.h5
physx_simulation/pysim/models/2016-09-11_04-41-18_03-49-00_ForceTorqueVelocity_rawPressuremap_neoleg/: architectureLSTM.json  weights_9.h5
physx_simulation/source/: CMakeLists.txt  config.h.in
physx_simulation/source/CMAES/: CMAData.cpp  CMAData.h  CMASearcher.cpp  CMASearcher.h  HapticObjective.cpp  HapticObjective.h  LearnerObjective.cpp  LearnerObjective.h  Searcher.cpp  Searcher.h  cmaes.cpp  cmaes.h  cmaes_interface.h  gownData.cpp  gownData.h
physx_simulation/source/myUtils/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  JetColorMap.h  MocapFrame.cpp  MocapFrame.h  PCA.cpp  PCA.h  ReadMe.txt  RenderType.h  ScreenShot.cpp  ScreenShot.h  SimFrame.cpp  SimFrame.h  TimeSeries.cpp  TimeSeries.h  mathlib.cpp  mathlib.h  polarDecomposition.cpp  polarDecomposition.h  spline.cpp  spline.hpp  stdafx.cpp  stdafx.h  timer.cpp  timer.h
physx_simulation/source/renderer/: RenderDescriptor.cpp  RenderDescriptor.h  Renderer.cpp  Renderer.h
physx_simulation/source/simulator/: CMakeLists.txt  Cloth.cpp  Cloth.h  Mesh.cpp  Mesh.h  MeshReader.cpp  MeshReader.h  PxSphereManager.cpp  PxSphereManager.h  RigPart.cpp  RigPart.h  baseSimulator.cpp  baseSimulator.h  gownSimulator.cpp  gownSimulator.h  shortsSimulator.cpp  shortsSimulator.h
physx_simulation/source/utils/: CMakeLists.txt  CppCommon.h  opengl.h
(+613 files in other folders)
